--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -22,7 +22,7 @@ jobs:
         run: |
           chmod +x ./validator
           ./validator --version
-          ./validator check-redirects -i packages.json -o out.json --chunk 0 --number-of-chunks 2 --limit 10
+          ./validator check-redirects -i packages.json -o out.json --chunk 0 --number-of-chunks 2
 
       - name: Upload artifacts
         uses: actions/upload-artifact@v3
