--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,12 +18,12 @@ jobs:
     name: Set up Mint & packages
     runs-on: macos-latest
     steps:
-      # - name: Cache/Restore Mint packages
-      #   id: mint-cache
-      #   uses: actions/cache@v2
-      #   with:
-      #       path: ${{ github.workspace }}/mint
-      #       key: ${{ runner.os }}-mint
+      - name: Mint cache
+        id: mint-cache
+        uses: actions/cache@v2
+        with:
+            path: ${{ github.workspace }}/mint
+            key: ${{ runner.os }}-mint
 
       - name: Install Mint
         run: |
@@ -38,12 +38,19 @@ jobs:
     needs: install_mint
     runs-on: macos-latest
     steps:
+      - name: Mint cache
+        id: mint-cache
+        uses: actions/cache@v2
+        with:
+            path: ${{ github.workspace }}/mint
+            key: ${{ runner.os }}-mint
+
       - name: Checkout
         uses: actions/checkout@v2
 
       - name: Check redirect
         run: |
-          mint run validator check-redirects -i packages.json -o redirect-checked.json --limit 10
+          ./mint/bin/validator check-redirects -i packages.json -o redirect-checked.json --limit 10
 
       - name: Upload artifacts
         uses: actions/upload-artifact@v3
@@ -63,7 +70,7 @@ jobs:
 
       - name: Check dependencies
         run: |
-          mint run validator check-dependencies -i redirect-checked.json.json -o out_0.json --chunk 0 --number-of-chunks 3
+          ./mint/bin/validator check-dependencies -i redirect-checked.json.json -o out_0.json --chunk 0 --number-of-chunks 3
 
       - name: Upload artifacts
         uses: actions/upload-artifact@v3
