--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -42,7 +42,7 @@ jobs:
         id: mint-cache
         uses: actions/cache@v2
         with:
-            path: ${{ github.workspace }}/mint
+            path: ${{ github.workspace }}/.mint
             key: ${{ runner.os }}-mint
 
       - name: Checkout
@@ -50,7 +50,6 @@ jobs:
 
       - name: Check redirect
         run: |
-          ls -laR
           ./.mint/bin/validator check-redirects -i packages.json -o redirect-checked.json --limit 10
 
       - name: Upload artifacts
