--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,13 +18,6 @@ jobs:
     name: Set up Mint & packages
     runs-on: macos-latest
     steps:
-      - name: Mint cache
-        id: mint-cache
-        uses: actions/cache@v2
-        with:
-            path: ${{ github.workspace }}/.mint
-            key: ${{ runner.os }}-mint
-
       - name: Install Mint
         run: |
           brew upgrade mint || brew install mint || true
@@ -32,7 +25,13 @@ jobs:
       - name: Install packages
         run: |
           mint install SwiftPackageIndex/PackageList-Validator@main
-  
+
+      - name: Upload artifacts
+        uses: actions/upload-artifact@v3
+        with:
+          path: |
+            .mint/bin/validator
+
   check_redirects:
     name: Check redirects
     needs: install_mint
@@ -41,16 +40,14 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
-      - name: Mint cache
-        id: mint-cache
-        uses: actions/cache@v2
+      - name: Download artifacts
+        uses: actions/download-artifact@v3
         with:
-            path: ${{ github.workspace }}/.mint
-            key: ${{ runner.os }}-mint
+          name: artifact
 
       - name: Check redirect
         run: |
-          ls -lR .mint
+          ls -lR .
           ./.mint/bin/validator check-redirects -i packages.json -o redirect-checked.json --limit 10
 
       - name: Upload artifacts
