--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,6 +11,7 @@ env:
   DEVELOPER_DIR: /Applications/Xcode_13.2.1.app
   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   MINT_PATH: $GITHUB_WORKSPACE/mint
+  MINT_LINK_PATH: $GITHUB_WORKSPACE/mint/bin
 
 jobs:
 
@@ -31,6 +32,8 @@ jobs:
 
       - name: Install packages
         run: |
+          echo MINT_PATH $MINT_PATH
+          echo MINT_LINK_PATH $MINT_LINK_PATH
           mint install SwiftPackageIndex/PackageList-Validator@main
 
   check_redirects:
