--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,7 +13,7 @@ env:
 
 jobs:
 
-  install_mint:
+  build_validator:
     name: Build validator
     runs-on: macos-latest
     steps:
@@ -32,7 +32,7 @@ jobs:
 
   check_redirects:
     name: Check redirects
-    needs: install_mint
+    needs: build_validator
     runs-on: macos-latest
     steps:
       - name: Checkout
