Switch to Linux

--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -32,7 +32,7 @@ jobs:
   check_redirects:
     name: Check redirects
     needs: build_validator
-    runs-on: macos-latest
+    runs-on: ubuntu-20.04
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -56,7 +56,7 @@ jobs:
   check_dependencies_0:
     name: Check dependencies 0
     needs: check_redirects
-    runs-on: macos-latest
+    runs-on: ubuntu-20.04
     steps:
       - name: Download artifacts
         uses: actions/download-artifact@v3
@@ -77,7 +77,7 @@ jobs:
   check_dependencies_1:
     name: Check dependencies 1
     needs: check_dependencies_0
-    runs-on: macos-latest
+    runs-on: ubuntu-20.04
     steps:
       - name: Download artifacts
         uses: actions/download-artifact@v3
@@ -98,7 +98,7 @@ jobs:
   check_dependencies_last:
     name: Check dependencies 2
     needs: check_dependencies_1
-    runs-on: macos-latest
+    runs-on: ubuntu-20.04
     steps:
       # we need to check out the repo in the last step in order to create a PR
       - name: Checkout
