--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -14,13 +14,20 @@ jobs:
 
   build_validator:
     name: Build validator
-    runs-on: macos-latest
+    runs-on: ubuntu-20.04
     steps:
+      - uses: fwal/setup-swift@v1
+        with:
+          swift-version: 5.6
+
+      - name: Get swift version
+        run: swift --version
+
       - name: Build validator
         run: |
           git clone https://github.com/SwiftPackageIndex/PackageList-Validator.git --depth 1
           cd PackageList-Validator
-          swift build
+          swift build --static-swift-stdlib
           cp $(swift build --show-bin-path)/validator $GITHUB_WORKSPACE/
 
       - name: Upload artifacts
@@ -41,6 +48,9 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           name: artifact
+
+      - name: Install libcurl
+        run: sudo apt-get install -y curl
 
       - name: Check redirect
         run: |
@@ -63,6 +73,9 @@ jobs:
         with:
           name: artifact
 
+      - name: Install libcurl
+        run: sudo apt-get install -y curl
+
       - name: Check dependencies
         run: |
           chmod +x ./validator
@@ -83,6 +96,9 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           name: artifact
+
+      - name: Install libcurl
+        run: sudo apt-get install -y curl
 
       - name: Check dependencies
         run: |
@@ -108,6 +124,9 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           name: artifact
+
+      - name: Install libcurl
+        run: sudo apt-get install -y curl
 
       - name: Check dependencies
         run: |
