--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -23,6 +23,9 @@ jobs:
       - name: Get swift version
         run: swift --version
 
+      - name: Install libcurl
+        run: sudo apt-get install -y curl
+
       - name: Build validator
         run: |
           git clone https://github.com/SwiftPackageIndex/PackageList-Validator.git --depth 1
