--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -14,20 +14,13 @@ jobs:
 
   build_validator:
     name: Build validator
-    runs-on: ubuntu-20.04
+    runs-on: macos-latest
     steps:
-      - uses: fwal/setup-swift@v1
-        with:
-          swift-version: 5.6
-
-      - name: Get swift version
-        run: swift --version
-
       - name: Build validator
         run: |
           git clone https://github.com/SwiftPackageIndex/PackageList-Validator.git --depth 1
           cd PackageList-Validator
-          swift build --static-swift-stdlib
+          swift build
           cp $(swift build --show-bin-path)/validator $GITHUB_WORKSPACE/
 
       - name: Upload artifacts
@@ -48,9 +41,6 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           name: artifact
-
-      - name: Install libcurl
-        run: sudo apt-get install -y curl
 
       - name: Check redirect
         run: |
@@ -73,9 +63,6 @@ jobs:
         with:
           name: artifact
 
-      - name: Install libcurl
-        run: sudo apt-get install -y curl
-
       - name: Check dependencies
         run: |
           chmod +x ./validator
@@ -96,9 +83,6 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           name: artifact
-
-      - name: Install libcurl
-        run: sudo apt-get install -y curl
 
       - name: Check dependencies
         run: |
@@ -124,9 +108,6 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           name: artifact
-
-      - name: Install libcurl
-        run: sudo apt-get install -y curl
 
       - name: Check dependencies
         run: |
