--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -14,7 +14,7 @@ jobs:
 
   build_validator:
     name: Build validator
-    runs-on: macos-latest
+    runs-on: ubuntu-20.04
     steps:
       - name: Build validator
         run: |
