--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -16,6 +16,10 @@ jobs:
     name: Build validator
     runs-on: ubuntu-20.04
     steps:
+      - uses: fwal/setup-swift@v1
+        with:
+          swift-version: 5.6
+
       - name: Build validator
         run: |
           git clone https://github.com/SwiftPackageIndex/PackageList-Validator.git --depth 1
@@ -34,6 +38,10 @@ jobs:
     needs: build_validator
     runs-on: ubuntu-20.04
     steps:
+      - uses: fwal/setup-swift@v1
+        with:
+          swift-version: 5.6
+
       - name: Checkout
         uses: actions/checkout@v2
 
@@ -58,6 +66,10 @@ jobs:
     needs: check_redirects
     runs-on: ubuntu-20.04
     steps:
+      - uses: fwal/setup-swift@v1
+        with:
+          swift-version: 5.6
+
       - name: Download artifacts
         uses: actions/download-artifact@v3
         with:
@@ -79,6 +91,10 @@ jobs:
     needs: check_dependencies_0
     runs-on: ubuntu-20.04
     steps:
+      - uses: fwal/setup-swift@v1
+        with:
+          swift-version: 5.6
+
       - name: Download artifacts
         uses: actions/download-artifact@v3
         with:
@@ -100,6 +116,10 @@ jobs:
     needs: check_dependencies_1
     runs-on: ubuntu-20.04
     steps:
+      - uses: fwal/setup-swift@v1
+        with:
+          swift-version: 5.6
+
       # we need to check out the repo in the last step in order to create a PR
       - name: Checkout
         uses: actions/checkout@v2
