--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -5,19 +5,21 @@ on:
   schedule:
     - cron: '0 0 * * *'
 
-# see https://github.com/actions/virtual-environments for available environments
 env:
   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  # see https://github.com/actions/virtual-environments for available environments
+  VIRTUAL_ENVIRONMENT: "ubuntu-20.04"
+  SWIFT_VERSION: "5.6"
 
 jobs:
 
   build_validator:
     name: Build validator
-    runs-on: ubuntu-20.04
+    runs-on: ${{ env.VIRTUAL_ENVIRONMENT }}
     steps:
       - uses: fwal/setup-swift@v1
         with:
-          swift-version: 5.6
+          swift-version: ${{ env.SWIFT_VERSION }}
 
       - name: Build validator
         run: |
@@ -35,11 +37,11 @@ jobs:
   check_redirects:
     name: Check redirects
     needs: build_validator
-    runs-on: ubuntu-20.04
+    runs-on: ${{ env.VIRTUAL_ENVIRONMENT }}
     steps:
       - uses: fwal/setup-swift@v1
         with:
-          swift-version: 5.6
+          swift-version: ${{ env.SWIFT_VERSION }}
 
       - name: Checkout
         uses: actions/checkout@v2
@@ -63,11 +65,11 @@ jobs:
   check_dependencies_0:
     name: Check dependencies 0
     needs: check_redirects
-    runs-on: ubuntu-20.04
+    runs-on: ${{ env.VIRTUAL_ENVIRONMENT }}
     steps:
       - uses: fwal/setup-swift@v1
         with:
-          swift-version: 5.6
+          swift-version: ${{ env.SWIFT_VERSION }}
 
       - name: Download artifacts
         uses: actions/download-artifact@v3
@@ -88,11 +90,11 @@ jobs:
   check_dependencies_1:
     name: Check dependencies 1
     needs: check_dependencies_0
-    runs-on: ubuntu-20.04
+    runs-on: ${{ env.VIRTUAL_ENVIRONMENT }}
     steps:
       - uses: fwal/setup-swift@v1
         with:
-          swift-version: 5.6
+          swift-version: ${{ env.SWIFT_VERSION }}
 
       - name: Download artifacts
         uses: actions/download-artifact@v3
@@ -113,11 +115,11 @@ jobs:
   check_dependencies_last:
     name: Check dependencies 2
     needs: check_dependencies_1
-    runs-on: ubuntu-20.04
+    runs-on: ${{ env.VIRTUAL_ENVIRONMENT }}
     steps:
       - uses: fwal/setup-swift@v1
         with:
-          swift-version: 5.6
+          swift-version: ${{ env.SWIFT_VERSION }}
 
       # we need to check out the repo in the last step in order to create a PR
       - name: Checkout
