--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -8,14 +8,13 @@ on:
 env:
   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   # see https://github.com/actions/virtual-environments for available environments
-  VIRTUAL_ENVIRONMENT: "ubuntu-20.04"
   SWIFT_VERSION: "5.6"
 
 jobs:
 
   build_validator:
     name: Build validator
-    runs-on: $VIRTUAL_ENVIRONMENT
+    runs-on: ubuntu-20.04
     steps:
       - uses: fwal/setup-swift@v1
         with:
@@ -37,7 +36,7 @@ jobs:
   check_redirects:
     name: Check redirects
     needs: build_validator
-    runs-on: $VIRTUAL_ENVIRONMENT
+    runs-on: ubuntu-20.04
     steps:
       - uses: fwal/setup-swift@v1
         with:
@@ -65,7 +64,7 @@ jobs:
   check_dependencies_0:
     name: Check dependencies 0
     needs: check_redirects
-    runs-on: $VIRTUAL_ENVIRONMENT
+    runs-on: ubuntu-20.04
     steps:
       - uses: fwal/setup-swift@v1
         with:
@@ -90,7 +89,7 @@ jobs:
   check_dependencies_1:
     name: Check dependencies 1
     needs: check_dependencies_0
-    runs-on: $VIRTUAL_ENVIRONMENT
+    runs-on: ubuntu-20.04
     steps:
       - uses: fwal/setup-swift@v1
         with:
@@ -115,7 +114,7 @@ jobs:
   check_dependencies_last:
     name: Check dependencies 2
     needs: check_dependencies_1
-    runs-on: $VIRTUAL_ENVIRONMENT
+    runs-on: ubuntu-20.04
     steps:
       - uses: fwal/setup-swift@v1
         with:
