Remove cache file before raising PR

--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -359,7 +359,7 @@ jobs:
           ./validator check-dependencies -i redirect-checked.json -o $OUTPUT_FILE --chunk $CHUNK --number-of-chunks $NUMBER_OF_CHUNKS
           ./validator merge-lists out_*.json -o packages.json
           # artifacts from appearing in the PR
-          rm out_*.json redirect-checked.json validator
+          rm out_*.json redirect-checked.json validator .packageDumpCache
 
       - name: Create pull request
         id: cpr
